--- a/css/syntax.css
+++ b/css/syntax.css
@@ -83,8 +83,20 @@
 .highlight .il { color: #009999; }
 .highlight .gc { color: #999; background-color: #EAF2F5; }
 
+.lineno { 
+  color: #ccc; 
+  display:inline-block; 
+  padding: 0 5px; 
+  border-right:1px solid #ccc;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
 
-@mixin unselectable() {
+/*@mixin unselectable() {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -99,7 +111,7 @@
   filter: alpha(opacity=$opacity-ie); //IE8
 }
 
-.highlight {
+.highlight .lineno {
   pre.lineno {
     border: none;
     @include opacity(0.6);  
@@ -119,4 +131,4 @@
       margin-bottom: 0px;
     }
   }
-}
+}*/
