--- a/css/syntax.css
+++ b/css/syntax.css
@@ -19,7 +19,7 @@
  * Courtesy of GitHub.com
  */
 
-.highlight pre, pre, .highlight .hll { background-color: #f8f8f8; border: 1px solid #ccc; padding: 6px 10px; border-radius: 3px; }
+.code pre, pre, .highlight .hll { background-color: #f8f8f8; border: 1px solid #ccc; padding: 6px 10px; border-radius: 3px; }
 .code .c { color: #999988; font-style: italic; }
 .code .err { color: #a61717; background-color: #e3d2d2; }
 .code .k { font-weight: bold; }
