--- a/css/syntax.css
+++ b/css/syntax.css
@@ -19,68 +19,70 @@
  * Courtesy of GitHub.com
  */
 
-.code pre, pre, .highlight .hll { background-color: #f8f8f8; border: 1px solid #ccc; padding: 6px 10px; border-radius: 3px; }
+/*.code pre, pre, .highlight .hll { background-color: #f8f8f8; border: 1px solid #ccc; padding: 6px 10px; border-radius: 3px; }*/
+.code { background-color: #002b36; color: #93a1a1 }
 .code .c { color: #999988; font-style: italic; }
 .code .err { color: #a61717; background-color: #e3d2d2; }
-.code .k { font-weight: bold; }
-.code .o { font-weight: bold; }
-.code .cm { color: #999988; font-style: italic; }
-.code .cp { color: #999999; font-weight: bold; }
-.code .c1 { color: #999988; font-style: italic; }
-.code .cs { color: #999999; font-weight: bold; font-style: italic; }
-.code .gd { color: #000000; background-color: #ffdddd; }
+.code .k { font-weight: bold; } /* Keyword */
+.code .o { font-weight: bold; } /* Operator */
+.code .x { color: #cb4b16 } /* Other */
+.code .cm { color: #999988; font-style: italic; } /* Comment.Multiline */
+.code .cp { color: #999999; font-weight: bold; } /* Comment.Preproc */
+.code .c1 { color: #999988; font-style: italic; } /* Comment.Single */
+.code .cs { color: #999999; font-weight: bold; font-style: italic; } /* Comment.Special */
+.code .gd { color: #000000; background-color: #ffdddd; } /* Generic.Deleted */
 .code .gd .x { color: #000000; background-color: #ffaaaa; }
-.code .ge { font-style: italic; }
-.code .gr { color: #aa0000; }
-.code .gh { color: #999999; }
-.code .gi { color: #000000; background-color: #ddffdd; }
+.code .ge { font-style: italic; } /* Generic.Emph */
+.code .gr { color: #aa0000; } /* Generic.Error */
+.code .gh { color: #999999; } /* Generic.Heading */
+.code .gi { color: #000000; background-color: #ddffdd; } /* Generic.Inserted */
 .code .gi .x { color: #000000; background-color: #aaffaa; }
-.code .go { color: #888888; }
-.code .gp { color: #555555; }
-.code .gs { font-weight: bold; }
-.code .gu { color: #800080; font-weight: bold; }
-.code .gt { color: #aa0000; }
-.code .kc { font-weight: bold; }
-.code .kd { font-weight: bold; }
-.code .kn { font-weight: bold; }
-.code .kp { font-weight: bold; }
-.code .kr { font-weight: bold; }
-.code .kt { color: #445588; font-weight: bold; }
-.code .m { color: #009999; }
-.code .s { color: #dd1144; }
+.code .go { color: #888888; } /* Generic.Output */
+.code .gp { color: #555555; } /* Generic.Prompt */
+.code .gs { font-weight: bold; } /* Generic.Strong */
+.code .gu { color: #800080; font-weight: bold; } /* Generic.Subheading */
+.code .gt { color: #aa0000; } /* Generic.Traceback */
+.code .kc { font-weight: bold; } /* Keyword.Constant */
+.code .kd { font-weight: bold; } /* Keyword.Declaration */
+.code .kn { font-weight: bold; } /* Keyword.Namespace */
+.code .kp { font-weight: bold; } /* Keyword.Pseudo */
+.code .kr { font-weight: bold; } /* Keyword.Reserved */
+.code .kt { color: #445588; font-weight: bold; } /* Keyword.Type */
+.code .m { color: #009999; } /* Literal.Number */
+.code .s { color: #dd1144; } /* Literal.String */
 .code .n { color: #333333; }
-.code .na { color: teal; }
-.code .nb { color: #0086b3; }
-.code .nc { color: #445588; font-weight: bold; }
-.code .no { color: teal; }
-.code .ni { color: purple; }
-.code .ne { color: #990000; font-weight: bold; }
-.code .nf { color: #990000; font-weight: bold; }
-.code .nn { color: #555555; }
-.code .nt { color: navy; }
-.code .nv { color: teal; }
-.code .ow { font-weight: bold; }
-.code .w { color: #bbbbbb; }
-.code .mf { color: #009999; }
-.code .mh { color: #009999; }
-.code .mi { color: #009999; }
-.code .mo { color: #009999; }
-.code .sb { color: #dd1144; }
-.code .sc { color: #dd1144; }
-.code .sd { color: #dd1144; }
-.code .s2 { color: #dd1144; }
-.code .se { color: #dd1144; }
-.code .sh { color: #dd1144; }
-.code .si { color: #dd1144; }
-.code .sx { color: #dd1144; }
-.code .sr { color: #009926; }
-.code .s1 { color: #dd1144; }
-.code .ss { color: #990073; }
-.code .bp { color: #999999; }
-.code .vc { color: teal; }
-.code .vg { color: teal; }
-.code .vi { color: teal; }
-.code .il { color: #009999; }
+.code .na { color: teal; } /* Name.Attribute */
+.code .nb { color: #0086b3; } /* Name.Builtin */
+.code .nc { color: #445588; font-weight: bold; } /* Name.Class */
+.code .no { color: teal; } /* Name.Constant */
+.code .ni { color: purple; } /* Name.Entity */
+.code .ne { color: #990000; font-weight: bold; } /* Name.Exception */
+.code .nf { color: #990000; font-weight: bold; } /* Name.Function */
+.code .nn { color: #555555; } /* Name.Namespace */
+.code .nt { color: navy; } /* Name.Tag */
+.code .nv { color: teal; } /* Name.Variable */
+.code .ow { font-weight: bold; } /* Operator.Word */
+.code .w { color: #bbbbbb; } /* Text.Whitespace */
+.code .mf { color: #009999; } /* Literal.Number.Float */
+.code .mh { color: #009999; } /* Literal.Number.Hex */
+.code .mi { color: #009999; } /* Literal.Number.Integer */
+.code .mo { color: #009999; } /* Literal.Number.Oct */
+.code .sb { color: #dd1144; } /* Literal.String.Backtick */
+.code .sc { color: #dd1144; } /* Literal.String.Char */
+.code .sd { color: #dd1144; } /* Literal.String.Doc */
+.code .s2 { color: #dd1144; } /* Literal.String.Double */
+.code .se { color: #dd1144; } /* Literal.String.Escape */
+.code .sh { color: #dd1144; } /* Literal.String.Heredoc */
+.code .si { color: #dd1144; } /* Literal.String.Interpol */
+.code .sx { color: #dd1144; } /* Literal.String.Other */
+.code .sr { color: #009926; } /* Literal.String.Regex */
+.code .s1 { color: #dd1144; } /* Literal.String.Single */
+.code .ss { color: #990073; } /* Literal.String.Symbol */
+.code .bp { color: #999999; } /* Name.Builtin.Pseudo */
+.code .vc { color: teal; } /* Name.Variable.Class */
+.code .vg { color: teal; } /* Name.Variable.Global */
+.code .vi { color: teal; } /* Name.Variable.Instance */
+.code .il { color: #009999; } /* Literal.Number.Integer.Long */
 .code .gc { color: #999; background-color: #EAF2F5; }
 
 .lineno { 
