--- a/css/syntax.css
+++ b/css/syntax.css
@@ -20,7 +20,7 @@
  */
 
 /*.code pre, pre, .highlight .hll { background-color: #f8f8f8; border: 1px solid #ccc; padding: 6px 10px; border-radius: 3px; }*/
-.code { background-color: #002b36; color: #93a1a1 }
+.code { background-color: rgba(255, 255, 255, 0); color: #ffffff }
 .code .c { color: #999988; font-style: italic; }
 .code .err { color: #a61717; background-color: #e3d2d2; }
 .code .k { font-weight: bold; } /* Keyword */
