--- a/css/syntax.css
+++ b/css/syntax.css
@@ -88,7 +88,7 @@
 .lineno { 
   color: #ccc; 
   display:inline-block; 
-  padding: 0 5px; 
+  padding: 5 5px; 
   border-right:1px solid #ccc;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -98,6 +98,13 @@
   user-select: none;
 }
 
+.gutter .gl {
+
+}
+
+.table th, .table td {
+  border: 0px;
+}
 /*@mixin unselectable() {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
