--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,15 +1,15 @@
 /* to make lines scroll instead of wrap */
 /* from http://stackoverflow.com/a/23393920 */
 
-.highlight pre code * {
+.code .highlight pre code * {
   white-space: nowrap;    // this sets all children inside to nowrap
 }
 
-.highlight pre {
+.code .highlight pre {
   overflow-x: auto;       // this sets the scrolling in x
 }
 
-.highlight pre code {
+.code .highlight pre code {
   white-space: pre;       // forces <code> to respect <pre> formatting
 }
 
@@ -20,70 +20,70 @@
  */
 
 /*.code pre, pre, .highlight .hll { background-color: #f8f8f8; border: 1px solid #ccc; padding: 6px 10px; border-radius: 3px; }*/
-.code { background-color: rgba(255, 255, 255, 0); color: #ffffff }
-.code .c { color: #999988; font-style: italic; }
-.code .err { color: #a61717; background-color: #e3d2d2; }
-.code .k { font-weight: bold; } /* Keyword */
-.code .o { font-weight: bold; } /* Operator */
-.code .x { color: #cb4b16 } /* Other */
-.code .cm { color: #999988; font-style: italic; } /* Comment.Multiline */
-.code .cp { color: #999999; font-weight: bold; } /* Comment.Preproc */
-.code .c1 { color: #999988; font-style: italic; } /* Comment.Single */
-.code .cs { color: #999999; font-weight: bold; font-style: italic; } /* Comment.Special */
-.code .gd { color: #000000; background-color: #ffdddd; } /* Generic.Deleted */
-.code .gd .x { color: #000000; background-color: #ffaaaa; }
-.code .ge { font-style: italic; } /* Generic.Emph */
-.code .gr { color: #aa0000; } /* Generic.Error */
-.code .gh { color: #999999; } /* Generic.Heading */
-.code .gi { color: #000000; background-color: #ddffdd; } /* Generic.Inserted */
-.code .gi .x { color: #000000; background-color: #aaffaa; }
-.code .go { color: #888888; } /* Generic.Output */
-.code .gp { color: #555555; } /* Generic.Prompt */
-.code .gs { font-weight: bold; } /* Generic.Strong */
-.code .gu { color: #800080; font-weight: bold; } /* Generic.Subheading */
-.code .gt { color: #aa0000; } /* Generic.Traceback */
-.code .kc { font-weight: bold; } /* Keyword.Constant */
-.code .kd { font-weight: bold; } /* Keyword.Declaration */
-.code .kn { font-weight: bold; } /* Keyword.Namespace */
-.code .kp { font-weight: bold; } /* Keyword.Pseudo */
-.code .kr { font-weight: bold; } /* Keyword.Reserved */
-.code .kt { color: #445588; font-weight: bold; } /* Keyword.Type */
-.code .m { color: #009999; } /* Literal.Number */
-.code .s { color: #dd1144; } /* Literal.String */
-.code .n { color: #333333; }
-.code .na { color: teal; } /* Name.Attribute */
-.code .nb { color: #0086b3; } /* Name.Builtin */
-.code .nc { color: #445588; font-weight: bold; } /* Name.Class */
-.code .no { color: teal; } /* Name.Constant */
-.code .ni { color: purple; } /* Name.Entity */
-.code .ne { color: #990000; font-weight: bold; } /* Name.Exception */
-.code .nf { color: #990000; font-weight: bold; } /* Name.Function */
-.code .nn { color: #555555; } /* Name.Namespace */
-.code .nt { color: navy; } /* Name.Tag */
-.code .nv { color: teal; } /* Name.Variable */
-.code .ow { font-weight: bold; } /* Operator.Word */
-.code .w { color: #bbbbbb; } /* Text.Whitespace */
-.code .mf { color: #009999; } /* Literal.Number.Float */
-.code .mh { color: #009999; } /* Literal.Number.Hex */
-.code .mi { color: #009999; } /* Literal.Number.Integer */
-.code .mo { color: #009999; } /* Literal.Number.Oct */
-.code .sb { color: #dd1144; } /* Literal.String.Backtick */
-.code .sc { color: #dd1144; } /* Literal.String.Char */
-.code .sd { color: #dd1144; } /* Literal.String.Doc */
-.code .s2 { color: #dd1144; } /* Literal.String.Double */
-.code .se { color: #dd1144; } /* Literal.String.Escape */
-.code .sh { color: #dd1144; } /* Literal.String.Heredoc */
-.code .si { color: #dd1144; } /* Literal.String.Interpol */
-.code .sx { color: #dd1144; } /* Literal.String.Other */
-.code .sr { color: #009926; } /* Literal.String.Regex */
-.code .s1 { color: #dd1144; } /* Literal.String.Single */
-.code .ss { color: #990073; } /* Literal.String.Symbol */
-.code .bp { color: #999999; } /* Name.Builtin.Pseudo */
-.code .vc { color: teal; } /* Name.Variable.Class */
-.code .vg { color: teal; } /* Name.Variable.Global */
-.code .vi { color: teal; } /* Name.Variable.Instance */
-.code .il { color: #009999; } /* Literal.Number.Integer.Long */
-.code .gc { color: #999; background-color: #EAF2F5; }
+.highlight，.code { background-color: rgba(255, 255, 255, 0); color: #ffffff }
+.highlight .c，.code .c { color: #999988; font-style: italic; }
+.highlight .err，.code .err { color: #a61717; background-color: #e3d2d2; }
+.highlight .k，.code .k { font-weight: bold; } /* Keyword */
+.highlight .o，.code .o { font-weight: bold; } /* Operator */
+.highlight .x，.code .x { color: #cb4b16 } /* Other */
+.highlight .cm，.code .cm { color: #999988; font-style: italic; } /* Comment.Multiline */
+.highlight .cp，.code .cp { color: #999999; font-weight: bold; } /* Comment.Preproc */
+.highlight .c1，.code .c1 { color: #999988; font-style: italic; } /* Comment.Single */
+.highlight .cs，.code .cs { color: #999999; font-weight: bold; font-style: italic; } /* Comment.Special */
+.highlight .gd，.code .gd { color: #000000; background-color: #ffdddd; } /* Generic.Deleted */
+.highlight .gd .x，.code .gd .x { color: #000000; background-color: #ffaaaa; }
+.highlight .ge，.code .ge { font-style: italic; } /* Generic.Emph */
+.highlight .gr，.code .gr { color: #aa0000; } /* Generic.Error */
+.highlight .gh，.code .gh { color: #999999; } /* Generic.Heading */
+.highlight .gi，.code .gi { color: #000000; background-color: #ddffdd; } /* Generic.Inserted */
+.highlight .gi .x，.code .gi .x { color: #000000; background-color: #aaffaa; }
+.highlight .go，.code .go { color: #888888; } /* Generic.Output */
+.highlight .gp，.code .gp { color: #555555; } /* Generic.Prompt */
+.highlight .gs，.code .gs { font-weight: bold; } /* Generic.Strong */
+.highlight .gu，.code .gu { color: #800080; font-weight: bold; } /* Generic.Subheading */
+.highlight .gt，.code .gt { color: #aa0000; } /* Generic.Traceback */
+.highlight .kc，.code .kc { font-weight: bold; } /* Keyword.Constant */
+.highlight .kd，.code .kd { font-weight: bold; } /* Keyword.Declaration */
+.highlight .kn，.code .kn { font-weight: bold; } /* Keyword.Namespace */
+.highlight .kp，.code .kp { font-weight: bold; } /* Keyword.Pseudo */
+.highlight .kr，.code .kr { font-weight: bold; } /* Keyword.Reserved */
+.highlight .kt，.code .kt { color: #445588; font-weight: bold; } /* Keyword.Type */
+.highlight .m，.code .m { color: #009999; } /* Literal.Number */
+.highlight .s，.code .s { color: #dd1144; } /* Literal.String */
+.highlight .n，.code .n { color: #333333; }
+.highlight .na，.code .na { color: teal; } /* Name.Attribute */
+.highlight .nb，.code .nb { color: #0086b3; } /* Name.Builtin */
+.highlight .nc，.code .nc { color: #445588; font-weight: bold; } /* Name.Class */
+.highlight .no，.code .no { color: teal; } /* Name.Constant */
+.highlight .ni，.code .ni { color: purple; } /* Name.Entity */
+.highlight .ne，.code .ne { color: #990000; font-weight: bold; } /* Name.Exception */
+.highlight .nf，.code .nf { color: #990000; font-weight: bold; } /* Name.Function */
+.highlight .nn，.code .nn { color: #555555; } /* Name.Namespace */
+.highlight .nt，.code .nt { color: navy; } /* Name.Tag */
+.highlight .nv，.code .nv { color: teal; } /* Name.Variable */
+.highlight .ow，.code .ow { font-weight: bold; } /* Operator.Word */
+.highlight .w，.code .w { color: #bbbbbb; } /* Text.Whitespace */
+.highlight .mf，.code .mf { color: #009999; } /* Literal.Number.Float */
+.highlight .mh，.code .mh { color: #009999; } /* Literal.Number.Hex */
+.highlight .mi，.code .mi { color: #009999; } /* Literal.Number.Integer */
+.highlight .mo，.code .mo { color: #009999; } /* Literal.Number.Oct */
+.highlight .sb，.code .sb { color: #dd1144; } /* Literal.String.Backtick */
+.highlight .sc，.code .sc { color: #dd1144; } /* Literal.String.Char */
+.highlight .sd，.code .sd { color: #dd1144; } /* Literal.String.Doc */
+.highlight .s2，.code .s2 { color: #dd1144; } /* Literal.String.Double */
+.highlight .se，.code .se { color: #dd1144; } /* Literal.String.Escape */
+.highlight .sh，.code .sh { color: #dd1144; } /* Literal.String.Heredoc */
+.highlight .si，.code .si { color: #dd1144; } /* Literal.String.Interpol */
+.highlight .sx，.code .sx { color: #dd1144; } /* Literal.String.Other */
+.highlight .sr，.code .sr { color: #009926; } /* Literal.String.Regex */
+.highlight .s1，.code .s1 { color: #dd1144; } /* Literal.String.Single */
+.highlight .ss，.code .ss { color: #990073; } /* Literal.String.Symbol */
+.highlight .bp，.code .bp { color: #999999; } /* Name.Builtin.Pseudo */
+.highlight .vc，.code .vc { color: teal; } /* Name.Variable.Class */
+.highlight .vg，.code .vg { color: teal; } /* Name.Variable.Global */
+.highlight .vi，.code .vi { color: teal; } /* Name.Variable.Instance */
+.highlight .il，.code .il { color: #009999; } /* Literal.Number.Integer.Long */
+.highlight .gc，.code .gc { color: #999; background-color: #EAF2F5; }
 
 .lineno { 
   color: #ccc; 
@@ -98,7 +98,7 @@
   user-select: none;
 }
 
-.gutter .gl {
+.gutter gl {
 
 }
 
