--- a/css/syntax.css
+++ b/css/syntax.css
@@ -99,11 +99,19 @@
 }
 
 .gutter .gl {
-    border: 10px;
+  border: 10px;
+}
+
+table {
+  border: 10px;
 }
 
 .table th, .table td {
   border: 0px;
+}
+
+.table .gutter .gl {
+    width: 10px;
 }
 /*@mixin unselectable() {
   -webkit-touch-callout: none;
