--- a/css/syntax.css
+++ b/css/syntax.css
@@ -98,20 +98,18 @@
   user-select: none;
 }
 
-.gutter .gl {
-  border: 10px;
-}
-
 table {
   border: 10px;
 }
 
 .table th, .table td {
-  border: 0px;
+  /*border: 0px;*/
+  padding: 0px;
 }
 
 td.gutter.gl {
     width: 10px;
+    padding: 0px;
 }
 /*@mixin unselectable() {
   -webkit-touch-callout: none;
