--- a/css/syntax.css
+++ b/css/syntax.css
@@ -107,9 +107,15 @@ table {
   padding: 0px;
 }
 
+.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
+    padding: 0px;
+    line-height: 1.42857143;
+    vertical-align: top;
+    border-top: 1px solid #ddd;
+}
+
 td.gutter.gl {
     width: 10px;
-    padding: 0px;
 }
 /*@mixin unselectable() {
   -webkit-touch-callout: none;
