--- a/css/syntax.css
+++ b/css/syntax.css
@@ -108,7 +108,7 @@ table {
   padding: 0px;
 }
 
-.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
+.highlighter-rouge>.table-responsive>.table>tbody>tr>td, .highlighter-rouge>.table-responsive>.table>tbody>tr>th, .highlighter-rouge>.table-responsive>.table>tfoot>tr>td, .highlighter-rouge>.table-responsive>.table>tfoot>tr>th, .highlighter-rouge>.table-responsive>.table>thead>tr>td, .highlighter-rouge>.table-responsive>.table>thead>tr>th {
     padding: 0px;
     vertical-align: top;
 }
