--- a/css/syntax.css
+++ b/css/syntax.css
@@ -19,8 +19,8 @@
  * Courtesy of GitHub.com
  */
 
-/*.code pre, pre, .highlight .hll { background-color: #f8f8f8; border: 1px solid #ccc; padding: 6px 10px; border-radius: 3px; }*/
-.highlight, .code { background-color: rgba(255, 255, 255, 0); color: #ffffff }
+.code pre, pre, .highlight .hll { background-color: rgba(255, 255, 255, 0); border: 1px solid #ccc; padding: 6px 10px; border-radius: 3px; }
+/*.highlight, .code { background-color: rgba(255, 255, 255, 0); color: #ffffff }*/
 .highlight .c, .code .c { color: #999988; font-style: italic; }
 .highlight .err, .code .err { color: #a61717; background-color: #e3d2d2; }
 .highlight .k, .code .k { font-weight: bold; } /* Keyword */
