--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -207,7 +207,7 @@ img.shadow {
 }
 .table th,
 .table td {
-  border: 1px solid #eee !important;
+  border: 1px solid #AFAFAF !important;
 }
 hr.small {
   max-width: 100px;
