--- a/css/syntax.css
+++ b/css/syntax.css
@@ -101,6 +101,7 @@
 .highlighter-rouge>.table-responsive>table {
   border: 0;
   background-color: rgb(234, 234, 234);
+  margin-bottom: 0;
 }
 
 .highlighter-rouge>.table-responsive>.table th, .highlighter-rouge>.table-responsive>.table td {
@@ -109,10 +110,14 @@
 }
 
 .highlighter-rouge>.table-responsive>.table>tbody>tr>td, .highlighter-rouge>.table-responsive>.table>tbody>tr>th, .highlighter-rouge>.table-responsive>.table>tfoot>tr>td, .highlighter-rouge>.table-responsive>.table>tfoot>tr>th, .highlighter-rouge>.table-responsive>.table>thead>tr>td, .highlighter-rouge>.table-responsive>.table>thead>tr>th {
-    padding: 0px;
-    vertical-align: top;
+  padding: 0px;
+  vertical-align: top;
 }
 
 td.gutter.gl {
-    width: 10px;
+  width: 10px;
+}
+
+td.gutter.gl>pre {
+  margin: 0 0 0px;
 }
