--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,6 +44,21 @@ layout: default
                 </div>
             </div>
         </div>
+        <div id="cus_google_search">
+            <script>
+              (function() {
+                var cx = '001907658793054288336:zpgnfyjtlxk';
+                var gcse = document.createElement('script');
+                gcse.type = 'text/javascript';
+                gcse.async = true;
+                gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+                    '//cse.google.com/cse.js?cx=' + cx;
+                var s = document.getElementsByTagName('script')[0];
+                s.parentNode.insertBefore(gcse, s);
+              })();
+            </script>
+            <gcse:search></gcse:search>
+        </div>
     </div>
 </header>
 
