--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,8 @@
     <!-- Pygments Github CSS -->
     <link rel="stylesheet" href="{{ "/css/syntax.css" | prepend: site.baseurl }}">
 
+    <link rel="stylesheet" href="{{ "/css/google-search.css" | prepend: site.baseurl }}">
+    
     <!-- Custom Fonts -->
     <!-- <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"> -->
     <!-- change font-awesome CDN to qiniu -->
