change google custom search box to 50% width

--- a/css/google-search.css
+++ b/css/google-search.css
@@ -1,7 +1,8 @@
 .gsc-control-cse.gsc-control-cse-en {
     background-color: rgba(255, 255, 255, 0);
     border: 0;
-    width: 500px;
+    /*width: 400px;*/
+    width: 50%;
     margin: auto;
 } 
 
