--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,9 +18,9 @@
     <link rel="stylesheet" href="{{ "/css/hux-blog.min.css" | prepend: site.baseurl }}">
 
     <!-- Pygments Github CSS -->
-    <link rel="stylesheet" href="{{ "/css/syntax.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/syntax-min.css" | prepend: site.baseurl }}">
 
-    <link rel="stylesheet" href="{{ "/css/google-search.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/google-search-min.css" | prepend: site.baseurl }}">
     
     <!-- Custom Fonts -->
     <!-- <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"> -->
