--- a/less/hux-blog.less
+++ b/less/hux-blog.less
@@ -100,7 +100,7 @@ hr.small {
 	border-width: 4px;
 	border-color: white;
 }
-// add by Hux
+
 pre,.table-responsive{
 	// sometimes you should use vendor-feature.
 	-webkit-overflow-scrolling: touch;
@@ -397,7 +397,7 @@ pre code{
 	background-attachment: scroll;
 	.background-cover;
 	// NOTE: Background images are set within the HTML using inline CSS!
-	margin-bottom: 0px;  /* 0 on mobile, modify by Hux */
+	margin-bottom: 0px;  
 	@media only screen and (min-width: 768px) {
 		margin-bottom: 20px;  /* response on desktop */
 	}
